--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Party.net",
   "license": "ISC",
   "dependencies": {
+    "@next/bundle-analyzer": "^15.3.1",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "^15.3.1",
@@ -27,5 +29,8 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
